Añadiendo funcion Cipher.js y pequeños cambios al JS y Html

--- a/src/secrets.html
+++ b/src/secrets.html
@@ -29,7 +29,7 @@
      <textarea id="textoCifrar" rows="15" cols="150" placeholder="Escribe tu secreto aqui"></textarea>
      <div>
      <label>A continuacion, escribe un número clave para encriptar tu secreto</label>
-      <input type= "number" pattern="[0-9]" placeholder= "Elige un numero clave" id='offset' value=' '>
+      <input type= "number" pattern="[0-9]" placeholder= "Elige un numero clave" id='offset' value=' ' min="1" max="33">
       <button id="botonCifrar" class="boton-inicio">ENCRIPTAR SECRETO
       </button>
       </div>
