--- a/src/secrets.html
+++ b/src/secrets.html
@@ -26,7 +26,7 @@
     </section>
     <p> MUY IMPORTANTE: No olvides decirle al destinatario el numero clave con el cual encriptaste tu secreto, ya que este es el único modo con el cual podra revelarlo.
     </p>
-     <textarea id="textoCifrar" rows="15" cols="150" placeholder="Escribe tu secreto aqui"></textarea>
+     <input id="textoCifrar" rows="15" cols="150" placeholder="Escribe tu secreto aqui"></input>
      <div>
      <label>A continuacion, escribe un número clave para encriptar tu secreto</label>
       <input type= "number" pattern="[0-9]" placeholder= "Elige un numero clave" id='offset' value=' ' min="1" max="33">
@@ -34,7 +34,7 @@
       </button>
       </div>
       <div>
-      <textarea class="desaparecer" id="textoCifrado" rows="15" cols="150" value=""></textarea>
+      <input class="desaparecer" id="textoCifrado" rows="15" cols="150" value=""></input>
      </div>
      <button id="botonInicio" class="boton-inicio">VOLVER A INICIO
       </button>
@@ -50,7 +50,7 @@
       </button>
       </div>
       <div>
-      <textarea class="desaparecer" id="textoDescifrado" rows="15" cols="150" value=""></textarea>
+       <input class="desaparecer" id="textoDescifrado" rows="15" cols="150" value=""></input>
      </div>
      <button id="botonInicio2" class="boton-inicio">VOLVER A INICIO
       </button>
