FUncionalidad de la fucnion Cipher

--- a/src/secrets.html
+++ b/src/secrets.html
@@ -26,15 +26,15 @@
     </section>
     <p> MUY IMPORTANTE: No olvides decirle al destinatario el numero clave con el cual encriptaste tu secreto, ya que este es el único modo con el cual podra revelarlo.
     </p>
-     <input id="textoCifrar" rows="15" cols="150" placeholder="Escribe tu secreto aqui"></input>
+     <input id="textoCifrar" rows="15" cols="150" placeholder="Escribe tu secreto aqui">
      <div>
      <label>A continuacion, escribe un número clave para encriptar tu secreto</label>
-      <input type= "number" pattern="[0-9]" placeholder= "Elige un numero clave" id='offset' value=' ' min="1" max="33">
+      <input type= "number" pattern="[0-9]" placeholder= "Elige un numero clave" id="offset" value="" min="1" max="33">
       <button id="botonCifrar" class="boton-inicio">ENCRIPTAR SECRETO
       </button>
       </div>
       <div>
-      <input class="desaparecer" id="textoCifrado" rows="15" cols="150" value=""></input>
+      <input class="desaparecer" id="textoCifrado" rows="15" cols="150" value="">
      </div>
      <button id="botonInicio" class="boton-inicio">VOLVER A INICIO
       </button>
@@ -42,15 +42,15 @@
   <section id="seccionDescifrar" class="desaparecer" >
       <section> COMO REVELAR SECRETOS: Para revelar tu secreto, únicamente pega el texto que desees descifrar en la caja de texto indicada y escribe el numero clave con el que fue encriptado, posteriormente optime el boton que dice "REVELAR SECRETO" y una vez hecho esto el secreto se revelara en la caja de texto inferior.
     </section>
-     <textarea id="textoDescifrar" rows="15" cols="150" placeholder="Escribe tu secreto a descifrar aqui"></textarea>
+     <input id="textoDescifrar" rows="15" cols="150" placeholder="Escribe tu secreto a descifrar aqui">
      <div>
      <label>A continuacion, escribe el numero clave para revelar tu secreto</label>
-      <input type= "number" pattern="[0-9]" placeholder= "Escribe el numero clave" id='offset2' value=' '>
+      <input type= "number" pattern="[0-9]" placeholder= "Escribe el numero clave" id="offset2" value="">
       <button id="botonDescifrar" class="boton-inicio">REVELAR SECRETO
       </button>
       </div>
       <div>
-       <input class="desaparecer" id="textoDescifrado" rows="15" cols="150" value=""></input>
+       <input class="desaparecer" id="textoDescifrado" rows="15" cols="150" value="">
      </div>
      <button id="botonInicio2" class="boton-inicio">VOLVER A INICIO
       </button>
